# haskell-dz2

./: .gitignore  README.md  SUGGESTION.md  hw-effects.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.2.4/: hw-effects-0.1.0.0-inplace-pure-bank.conf  hw-effects-0.1.0.0-inplace.conf  package.cache
dist-newstyle/packagedb/ghc-9.2.5/: hw-effects-0.1.0.0-inplace-pure-bank.conf  hw-effects-0.1.0.0-inplace.conf  package.cache
pure-bank/Bank/: Pure.hs
pure-bank/Data/: Accounts.hs
src/: Bank.hs
src/Bank/: Error.hs
test/: Spec.hs
