cabal-version:      2.4
name:               hw-effects
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             AndroidM0nkey
maintainer:         stepanovprogramming@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable hw-effects
    main-is:          Main.hs
    other-modules:    Bank.Handle
    build-depends:
        base
        , mtl
        , hw-effects
        , containers
        , transformers
        , pure-bank
        , stm
    build-depends:
        , aeson
        , attoparsec
        , base-compat
        , bytestring
        , containers
        , directory
        , http-api-data
        , http-client
        , http-media
        , http-types
        , mtl
        , string-conversions
        , text
        , transformers
        , wai
        , warp

    -- Servant dependencies
    build-depends:
        servant
        , servant-server
        , servant-client
        , servant-docs

    -- Other dependencies: Lower bound around what is in the latest Stackage LTS.
    -- Here can be exceptions if we really need features from the newer versions.
    build-depends:
        blaze-html   >= 0.9.0.1 && < 0.10
        , blaze-markup >= 0.8.0.0 && < 0.9
        , cookie       >= 0.4.3   && < 0.5
        , js-jquery    >= 3.3.1   && < 3.4
        , lucid        >= 2.9.11  && < 2.12
        , random       >= 1.1     && < 1.3
        , servant-js   >= 0.9     && < 0.10
        , time         >= 1.6.0.1 && < 1.13
    hs-source-dirs:   app
    default-language: Haskell2010

library
    exposed-modules:  Bank, Bank.Error
    build-depends:    base ^>=4.16
    hs-source-dirs:   src
    default-language: Haskell2010

library pure-bank
    exposed-modules:  Bank.Pure
    other-modules:    Data.Accounts
    build-depends:
      base
      , mtl
      , hw-effects
      , containers
      , transformers
    hs-source-dirs:   pure-bank
    default-language: Haskell2010

test-suite hw-effects-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    build-depends:
      base
      , mtl
      , hw-effects
      , pure-bank
      , QuickCheck
    hs-source-dirs:   test
    default-language: Haskell2010
